# Bachelorprojekt

./: .gitignore  README.md  SimulatorState.java
Multivesta meets c++/src/BankSimulator/: BankSimulatorLink.java  EntrypointMultiVeStA.java  SimulatorState.java
Multivesta meets c++/src/SimpleBank/: EntrypointMultiVeStA.java  JNASimulatorLink.java  SimulatorState.java  TestBank.java  TestSimulator.java
Multivesta meets c++/src/argos/: ArgosLink.java  EntrypointMultiVeStA.java  SimulatorState.java  TestArgos.java
Multivesta meets c++/src/introductionToJNA/: FirstCppApplication.java  HelloWorld.java
Multivesta meets c++/src/inventoryManagement/: EntrypointMultiVeStA.java  JNALink.java  SimulatorState.java  TestInventory.java
Multivesta meets c++/src/inventoryManagementTesting/: JNALink.java  SimulatorState.java  TestInventory.java
Multivesta meets c++/src/mockupIntegration/: EntrypointMultiVeStA.java  JNASimulatorLink.java  SimulatorState.java  TestSimulator.java
c++ applications/: diffusion10.argos  gaslike.lua
c++ applications/BankSimulator/: BankSimulator.cpp  BankSimulator.h  CMakeLists.txt  JNALink.cpp  JNALink.h  main.cpp
c++ applications/BankSimulator/cmake/: FindJNALink.cmake
c++ applications/FinanceSimulator/: CMakeLists.txt  CornerPortfolio.h  FinanceSimulator.cpp  FinanceSimulator.h  Investor.cpp  Investor.h  OrderSlip.cpp  OrderSlip.h  Security.cpp  Security.h  Statistician.cpp  Statistician.h  Trader.cpp  Trader.h
c++ applications/HelloJNA/: CHelloJNA.cpp  CHelloJNA.h  CMakeLists.txt  library.cpp  library.h  main.cpp
c++ applications/InventoryManagementSimulator/: CMakeLists.txt  Customer.h  Inventory.h  InventoryManagementSimulator.cpp  InventoryManagementSimulator.h  JNALink.cpp  JNALink.h  Product.h  Shop.h  Vendor.h  main.cpp
c++ applications/InventoryManagementSimulator/cmake/: FindJNALink.cmake
c++ applications/JNALink/: CMakeLists.txt  JNALink.cpp  JNALink.h  SimulatorLink.h
c++ applications/Simulator/: CMakeLists.txt  DiscreteEventSimulator.cpp  DiscreteEventSimulator.h  JNASimulatorLink.cpp  JNASimulatorLink.h  SimulatorLink.h  main.cpp
c++ applications/Spike/: CMakeLists.txt  JNALink.cpp  JNALink.h  SpikeWrapper.cpp  SpikeWrapper.h
c++ applications/Spike/cmake/: FindCvode.cmake  FindDSSD.cmake  FindJNALink.cmake  FindSpike.cmake
c++ applications/argosFromBinary/: ArgosSimulatorWrapper.cpp  ArgosSimulatorWrapper.h  CFootBotForaging.cpp  CFootBotForaging.h  CForagingLoopFunctions.cpp  CForagingLoopFunctions.h  CMakeLists.txt  JNALink.cpp  JNALink.h  MultivestaLoopFunctions.cpp  MultivestaLoopFunctions.h  SimulatorLink.h  TestWrapper.cpp
c++ applications/argosFromBinary/cmake/: FindArgos.cmake  FindJNALink.cmake  FindLua.cmake
c++ applications/simpleDLL/: CMakeLists.txt  Foo.cpp  Foo.h  simpleDLL.cpp  simpleDLL.h
filesForPlots/: ArgosTimeAtSteps.txt  BankSizeAtTimeEqual.txt  BankSizeAtTimeGreat.txt  BankSizeAtTimeLess.txt  BankTimeDependant.txt  BankTimeIndependant.txt  ComparisonPlot.m  InventoryCompare.txt  InventoryLostAtTimeEqual.txt  InventoryLostAtTimeGreat.txt  InventoryLostAtTimeLess.txt  InventoryMultiple.txt  InventoryRestockAtTimeEqual.txt  InventoryRestockAtTimeGreat.txt  InventoryRestockAtTimeLess.txt  InventoryStockAtTimeEqual.txt  InventoryStockAtTimeGreat.txt  InventoryStockAtTimeLess.txt  InventoryTimeAtSoldEqual.txt  InventoryTimeAtSoldGreat.txt  InventoryTimeAtSoldLess.txt  MultipleExpressionsPlot.m  SinglePlots.m  SinglePlots.m~  generatePlot.m  generatePlot.m~
quatex files/: lostAtSold.quatex  lostAtTime.quatex  multipleExprInv.quatex  restockAtTime.quatex  sizeAfterXSteps.quatex  sizeAtTime.quatex  soldAtRestock.quatex  stepsAtTimeX.quatex  stockAtTime.quatex  timeAtArrivedAndServed.quatex  timeAtRestock.quatex  timeAtSold.quatex  timeAtSteps.quatex
